# EdgeDetection

./: .gitignore  CMakeLists.txt  README.md
app/: App.cpp
include/: EdgeDetection.hpp
include/EdgeDetection/: EdgeDetectionTypes.hpp  Filter.hpp  GradientCalculation.hpp  GradientSuppression.hpp  HorizontalEdgeFilter.hpp  HorizontalSobelFilter.hpp  HysteresisThresholding.hpp  InputParser.hpp  NoiseReductionFilter.hpp  PixelMatrix.hpp  SignedFilter.hpp  Utility.hpp  Vector2Int.hpp  VerticalEdgeFilter.hpp  VerticalSobelFilter.hpp
source/EdgeDetection/: Filter.cpp  GradientCalculation.cpp  GradientSuppression.cpp  HorizontalEdgeFilter.cpp  HorizontalSobelFilter.cpp  HysteresisThresholding.cpp  InputParser.cpp  NoiseReductionFilter.cpp  PixelMatrix.cpp  SignedFilter.cpp  Utility.cpp  Vector2Int.cpp  VerticalEdgeFilter.cpp  VerticalSobelFilter.cpp
